Fix alignment of unread and subgroups (#3621)

--- a/angular/core/components/sidebar/sidebar.scss
+++ b/angular/core/components/sidebar/sidebar.scss
@@ -30,7 +30,7 @@
   margin-bottom: 0px;
   margin-top: 0px;
   text-align: left;
-  padding-left: 45px;
+  padding-left: 42px;
 }
 
 .sidebar__scrollable-list {
